--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "blogger",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.4",
+    "vue": "^2.5.16",
+    "vue-resource": "^1.5.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
