--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "@rails/webpacker": "3.4",
     "vue": "^2.5.16",
+    "vue-loader": "^14.2.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
